generated-out/vanilla/dear-imgui-raw-vanilla/cbits/DearImGuiWrappers.h

void ImDrawList_AddBezierCubic_wrap(ImDrawList* self, ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, ImU32 col, float thickness, int num_segments);
void ImDrawList_AddBezierQuadratic_wrap(ImDrawList* self, ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImU32 col, float thickness, int num_segments);
void ImDrawList_AddCircle_wrap(ImDrawList* self, ImVec2 const* center, float radius, ImU32 col, int num_segments, float thickness);
void ImDrawList_AddCircleFilled_wrap(ImDrawList* self, ImVec2 const* center, float radius, ImU32 col, int num_segments);
void ImDrawList_AddEllipse_wrap(ImDrawList* self, ImVec2 const* center, ImVec2 const* radius, ImU32 col, float rot, int num_segments, float thickness);
void ImDrawList_AddEllipseFilled_wrap(ImDrawList* self, ImVec2 const* center, ImVec2 const* radius, ImU32 col, float rot, int num_segments);
void ImDrawList_AddImage_wrap(ImDrawList* self, ImTextureRef const* tex_ref, ImVec2 const* p_min, ImVec2 const* p_max, ImVec2 const* uv_min, ImVec2 const* uv_max, ImU32 col);
void ImDrawList_AddImageQuad_wrap(ImDrawList* self, ImTextureRef const* tex_ref, ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, ImVec2 const* uv1, ImVec2 const* uv2, ImVec2 const* uv3, ImVec2 const* uv4, ImU32 col);
void ImDrawList_AddImageRounded_wrap(ImDrawList* self, ImTextureRef const* tex_ref, ImVec2 const* p_min, ImVec2 const* p_max, ImVec2 const* uv_min, ImVec2 const* uv_max, ImU32 col, float rounding, ImDrawFlags flags);
void ImDrawList_AddLine_wrap(ImDrawList* self, ImVec2 const* p1, ImVec2 const* p2, ImU32 col, float thickness);
void ImDrawList_AddNgon_wrap(ImDrawList* self, ImVec2 const* center, float radius, ImU32 col, int num_segments, float thickness);
void ImDrawList_AddNgonFilled_wrap(ImDrawList* self, ImVec2 const* center, float radius, ImU32 col, int num_segments);
void ImDrawList_AddQuad_wrap(ImDrawList* self, ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, ImU32 col, float thickness);
void ImDrawList_AddQuadFilled_wrap(ImDrawList* self, ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, ImU32 col);
void ImDrawList_AddRect_wrap(ImDrawList* self, ImVec2 const* p_min, ImVec2 const* p_max, ImU32 col, float rounding, ImDrawFlags flags, float thickness);
void ImDrawList_AddRectFilled_wrap(ImDrawList* self, ImVec2 const* p_min, ImVec2 const* p_max, ImU32 col, float rounding, ImDrawFlags flags);
void ImDrawList_AddRectFilledMultiColor_wrap(ImDrawList* self, ImVec2 const* p_min, ImVec2 const* p_max, ImU32 col_upr_left, ImU32 col_upr_right, ImU32 col_bot_right, ImU32 col_bot_left);
void ImDrawList_AddText_wrap(ImDrawList* self, ImVec2 const* pos, ImU32 col, const char* text_begin, const char* text_end);
void ImDrawList_AddTextImFontPtr_wrap(ImDrawList* self, ImFont* font, float font_size, ImVec2 const* pos, ImU32 col, const char* text_begin, const char* text_end, float wrap_width, const ImVec4* cpu_fine_clip_rect);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);