generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImDrawList.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImDrawList where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddBezierCubic_wrap"
  c_imDrawList_AddBezierCubic :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> CInt -> IO ()

imDrawList_AddBezierCubic :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> CInt -> IO ()
imDrawList_AddBezierCubic self p1 p2 p3 p4 col thickness num_segments =
  with p1 $ \_p1 -> with p2 $ \_p2 -> with p3 $ \_p3 -> with p4 $ \_p4 -> c_imDrawList_AddBezierCubic self _p1 _p2 _p3 _p4 col thickness num_segments

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddBezierQuadratic_wrap"
  c_imDrawList_AddBezierQuadratic :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> CInt -> IO ()

imDrawList_AddBezierQuadratic :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> CInt -> IO ()
imDrawList_AddBezierQuadratic self p1 p2 p3 col thickness num_segments =
  with p1 $ \_p1 -> with p2 $ \_p2 -> with p3 $ \_p3 -> c_imDrawList_AddBezierQuadratic self _p1 _p2 _p3 col thickness num_segments

-- C: void AddCallback(ImDrawList* self, ImDrawCallback callback, void* userdata, size_t userdata_size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_AddCallback"
  imDrawList_AddCallback :: (Ptr ImDrawList) -> ImDrawCallback -> (Ptr ()) -> CSize -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddCircle_wrap"
  c_imDrawList_AddCircle :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> ImU32 -> CInt -> CFloat -> IO ()

imDrawList_AddCircle :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> ImU32 -> CInt -> CFloat -> IO ()
imDrawList_AddCircle self center radius col num_segments thickness =
  with center $ \_p1 -> c_imDrawList_AddCircle self _p1 radius col num_segments thickness

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddCircleFilled_wrap"
  c_imDrawList_AddCircleFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> ImU32 -> CInt -> IO ()

imDrawList_AddCircleFilled :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> ImU32 -> CInt -> IO ()
imDrawList_AddCircleFilled self center radius col num_segments =
  with center $ \_p1 -> c_imDrawList_AddCircleFilled self _p1 radius col num_segments

-- C: void AddConcavePolyFilled(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_AddConcavePolyFilled"
  imDrawList_AddConcavePolyFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CInt -> ImU32 -> IO ()
-- C: void AddConvexPolyFilled(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_AddConvexPolyFilled"
  imDrawList_AddConvexPolyFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CInt -> ImU32 -> IO ()
-- C: void AddDrawCmd(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_AddDrawCmd"
  imDrawList_AddDrawCmd :: (Ptr ImDrawList) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddEllipse_wrap"
  c_imDrawList_AddEllipse :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> CInt -> CFloat -> IO ()

imDrawList_AddEllipse :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> CInt -> CFloat -> IO ()
imDrawList_AddEllipse self center radius col rot num_segments thickness =
  with center $ \_p1 -> with radius $ \_p2 -> c_imDrawList_AddEllipse self _p1 _p2 col rot num_segments thickness

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddEllipseFilled_wrap"
  c_imDrawList_AddEllipseFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> CInt -> IO ()

imDrawList_AddEllipseFilled :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> CInt -> IO ()
imDrawList_AddEllipseFilled self center radius col rot num_segments =
  with center $ \_p1 -> with radius $ \_p2 -> c_imDrawList_AddEllipseFilled self _p1 _p2 col rot num_segments

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddImage_wrap"
  c_imDrawList_AddImage :: (Ptr ImDrawList) -> (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_AddImage :: (Ptr ImDrawList) -> ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_AddImage self tex_ref p_min p_max uv_min uv_max col =
  with tex_ref $ \_p1 -> with p_min $ \_p2 -> with p_max $ \_p3 -> with uv_min $ \_p4 -> with uv_max $ \_p5 -> c_imDrawList_AddImage self _p1 _p2 _p3 _p4 _p5 col

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddImageQuad_wrap"
  c_imDrawList_AddImageQuad :: (Ptr ImDrawList) -> (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_AddImageQuad :: (Ptr ImDrawList) -> ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_AddImageQuad self tex_ref p1 p2 p3 p4 uv1 uv2 uv3 uv4 col =
  with tex_ref $ \_p1 -> with p1 $ \_p2 -> with p2 $ \_p3 -> with p3 $ \_p4 -> with p4 $ \_p5 -> with uv1 $ \_p6 -> with uv2 $ \_p7 -> with uv3 $ \_p8 -> with uv4 $ \_p9 -> c_imDrawList_AddImageQuad self _p1 _p2 _p3 _p4 _p5 _p6 _p7 _p8 _p9 col

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddImageRounded_wrap"
  c_imDrawList_AddImageRounded :: (Ptr ImDrawList) -> (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> ImDrawFlags -> IO ()

imDrawList_AddImageRounded :: (Ptr ImDrawList) -> ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> ImDrawFlags -> IO ()
imDrawList_AddImageRounded self tex_ref p_min p_max uv_min uv_max col rounding flags =
  with tex_ref $ \_p1 -> with p_min $ \_p2 -> with p_max $ \_p3 -> with uv_min $ \_p4 -> with uv_max $ \_p5 -> c_imDrawList_AddImageRounded self _p1 _p2 _p3 _p4 _p5 col rounding flags

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddLine_wrap"
  c_imDrawList_AddLine :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> IO ()

imDrawList_AddLine :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> IO ()
imDrawList_AddLine self p1 p2 col thickness =
  with p1 $ \_p1 -> with p2 $ \_p2 -> c_imDrawList_AddLine self _p1 _p2 col thickness

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddNgon_wrap"
  c_imDrawList_AddNgon :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> ImU32 -> CInt -> CFloat -> IO ()

imDrawList_AddNgon :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> ImU32 -> CInt -> CFloat -> IO ()
imDrawList_AddNgon self center radius col num_segments thickness =
  with center $ \_p1 -> c_imDrawList_AddNgon self _p1 radius col num_segments thickness

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddNgonFilled_wrap"
  c_imDrawList_AddNgonFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> ImU32 -> CInt -> IO ()

imDrawList_AddNgonFilled :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> ImU32 -> CInt -> IO ()
imDrawList_AddNgonFilled self center radius col num_segments =
  with center $ \_p1 -> c_imDrawList_AddNgonFilled self _p1 radius col num_segments

-- C: void AddPolyline(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col, ImDrawFlags flags, float thickness)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_AddPolyline"
  imDrawList_AddPolyline :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CInt -> ImU32 -> ImDrawFlags -> CFloat -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddQuad_wrap"
  c_imDrawList_AddQuad :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> IO ()

imDrawList_AddQuad :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> IO ()
imDrawList_AddQuad self p1 p2 p3 p4 col thickness =
  with p1 $ \_p1 -> with p2 $ \_p2 -> with p3 $ \_p3 -> with p4 $ \_p4 -> c_imDrawList_AddQuad self _p1 _p2 _p3 _p4 col thickness

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddQuadFilled_wrap"
  c_imDrawList_AddQuadFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_AddQuadFilled :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_AddQuadFilled self p1 p2 p3 p4 col =
  with p1 $ \_p1 -> with p2 $ \_p2 -> with p3 $ \_p3 -> with p4 $ \_p4 -> c_imDrawList_AddQuadFilled self _p1 _p2 _p3 _p4 col

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddRect_wrap"
  c_imDrawList_AddRect :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> ImDrawFlags -> CFloat -> IO ()

imDrawList_AddRect :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> ImDrawFlags -> CFloat -> IO ()
imDrawList_AddRect self p_min p_max col rounding flags thickness =
  with p_min $ \_p1 -> with p_max $ \_p2 -> c_imDrawList_AddRect self _p1 _p2 col rounding flags thickness

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddRectFilled_wrap"
  c_imDrawList_AddRectFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> ImDrawFlags -> IO ()

imDrawList_AddRectFilled :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> ImDrawFlags -> IO ()
imDrawList_AddRectFilled self p_min p_max col rounding flags =
  with p_min $ \_p1 -> with p_max $ \_p2 -> c_imDrawList_AddRectFilled self _p1 _p2 col rounding flags

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddRectFilledMultiColor_wrap"
  c_imDrawList_AddRectFilledMultiColor :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> ImU32 -> ImU32 -> ImU32 -> IO ()

imDrawList_AddRectFilledMultiColor :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> ImU32 -> ImU32 -> ImU32 -> IO ()
imDrawList_AddRectFilledMultiColor self p_min p_max col_upr_left col_upr_right col_bot_right col_bot_left =
  with p_min $ \_p1 -> with p_max $ \_p2 -> c_imDrawList_AddRectFilledMultiColor self _p1 _p2 col_upr_left col_upr_right col_bot_right col_bot_left

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddText_wrap"
  c_imDrawList_AddText :: (Ptr ImDrawList) -> (Ptr ImVec2) -> ImU32 -> CString -> CString -> IO ()

imDrawList_AddText :: (Ptr ImDrawList) -> ImVec2 -> ImU32 -> CString -> CString -> IO ()
imDrawList_AddText self pos col text_begin text_end =
  with pos $ \_p1 -> c_imDrawList_AddText self _p1 col text_begin text_end

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddTextImFontPtr_wrap"
  c_imDrawList_AddTextImFontPtr :: (Ptr ImDrawList) -> (Ptr ImFont) -> CFloat -> (Ptr ImVec2) -> ImU32 -> CString -> CString -> CFloat -> (Ptr ImVec4) -> IO ()

imDrawList_AddTextImFontPtr :: (Ptr ImDrawList) -> (Ptr ImFont) -> CFloat -> ImVec2 -> ImU32 -> CString -> CString -> CFloat -> (Ptr ImVec4) -> IO ()
imDrawList_AddTextImFontPtr self font font_size pos col text_begin text_end wrap_width cpu_fine_clip_rect =
  with pos $ \_p3 -> c_imDrawList_AddTextImFontPtr self font font_size _p3 col text_begin text_end wrap_width cpu_fine_clip_rect
